--- a/src/libs/SoloX.BlazorJsBlob/SoloX.BlazorJsBlob.csproj
+++ b/src/libs/SoloX.BlazorJsBlob/SoloX.BlazorJsBlob.csproj
@@ -3,7 +3,7 @@
   <Import Project="..\..\SharedProperties.props" />
 
   <PropertyGroup>
-	<TargetFrameworks>net6.0;net5.0</TargetFrameworks>
+	<TargetFrameworks>net7.0;net6.0;net5.0</TargetFrameworks>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
@@ -18,7 +18,11 @@
 
   <ItemGroup Condition=" '$(TargetFramework)' == 'net6.0' ">
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.4" />
-    <PackageReference Include="SoloX.CodeQuality.Prod" Version="2.0.8">
+  </ItemGroup>
+
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net7.0' ">
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.2" />
+    <PackageReference Include="SoloX.CodeQuality.Prod" Version="2.0.16">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
